--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "passlib (>=1.7.4,<2.0.0)",
     "python-jose (>=3.5.0,<4.0.0)",
     "argon2-cffi (>=25.1.0,<26.0.0)",
-    "python-multipart (>=0.0.20,<0.0.21)"
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "python-dotenv (>=1.2.1,<2.0.0)"
 ]
 
 [tool.poetry]
