--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = [
     "python-multipart (>=0.0.20,<0.0.21)",
     "python-dotenv (>=1.2.1,<2.0.0)",
     "requests (>=2.32.5,<3.0.0)",
-    "aiofiles (>=25.1.0,<26.0.0)"
+    "aiofiles (>=25.1.0,<26.0.0)",
+    "python-dateutil (>=2.9.0.post0,<3.0.0)"
 ]
 
 [tool.poetry]
