--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 SECRET_KEY=robiulsunyemon
 ALGORITHM=HS256
+
+
+APP_PASSWORD=btnZaut5YuH4RmsVnVyNPXNZ79f2JVBk
+EMAIL=noreply@moncoachcivique.com
+HOST_NAME=smtp.ionos.fr
+PORT=465
